# rob301_simulation

./: .ftpconfig  .gitignore  CMakeLists.txt  README.md  lab03_pid.py  package.xml  pc_setup.sh
Maps/: lab02_ground_mark.world  yellow_line.world  yellow_mark.world
Maps/yellow line/: model.sdf
launch/: lab01.launch  lab01_pub.launch  lab02.launch  lab_01.launch  lab_03.launch  lab_03_practice.launch  lab_03_racetrack.launch  lab_04.launch  lab_04_empty.launch  lab_04_occlusions.launch  project.launch  project_demo.launch  race_course.launch  race_course_no_x.launch  rob301.launch  test.launch  turtlebot3_house.launch  turtlebot3_house_no_x.launch  turtlebot3_yellowtape_no_x.launch
launch/dep/: competition.launch  practice.launch  race_course.launch  race_course_no_x.launch  rob301.launch  turtlebot.launch  turtlebot3_house.launch
models/black line/: model.sdf
models/building/: model.config  model.dae  model.sdf
models/cn_tower/: Object.dae  model.config  model.sdf
models/lab_3_race_track/: model.sdf  (+1 more)
nodes/: get_scan_angle.py  lab01_motor.py  lab01_odom.py  lab02.py  line_detector.py
scripts/: make_qr_model.py
starter_nodes/: camera_visualize.py  final_project.py  get_scan_angle.py  lab01_motor.py  lab01_odom.py  lab02.py  lab03.py  lab04_kf.py  line_detector.py  pub_noisy_vel.py
urdf/: camera.urdf.xacro  turtlebot.urdf.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
worlds/: lab_04.world  lab_04_empty.world  lab_04_occlusions.world  lab_3_test_course.world  project_demo_map.world  project_map.world  rob301.world  test.world
(+20 files in other folders)
