<?xml version="1.0"?>
<package format="2">
  <name>rob301_simulation</name>
  <version>0.0.0</version>
  <description>The rob301_simulation package</description>
  <maintainer email="brandon.wagstaff@robotics.utias.utoronto.ca">Brandon Wagstaff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
